--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -21,9 +21,15 @@
       <add-to-group group-id="EditorPopupMenu" anchor="first"/>
       <keyboard-shortcut first-keystroke="alt N" keymap="$default"/>
     </action>
+
     <action id="PreLine" class="com.bin.yang.thiefbook.PreLine" text="Pre Line" description="NextLine">
       <add-to-group group-id="EditorPopupMenu" anchor="first"/>
       <keyboard-shortcut first-keystroke="alt P" keymap="$default"/>
+    </action>
+
+    <action id="Boss" class="com.bin.yang.thiefbook.Boss" text="Boss" description="Boss">
+      <add-to-group group-id="EditorPopupMenu" anchor="first"/>
+      <keyboard-shortcut first-keystroke="alt z" keymap="$default"/>
     </action>
 
   </actions>
